adding chart example with d3 code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@ body {
 
 </style>
 <body>
-<script src="//d3js.org/d3.v3.min.js"></script>
+<link href="styles/styles.css" rel="stylesheet" type="text/css">
+<script src="https://d3js.org/d3.v3.min.js"></script>
+
+
 <script>
 
 var margin = {top: 20, right: 50, bottom: 30, left: 50},
